# archemede__School

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
app_file/pages/: home_page.py  login.py
src/: main.py
src/app_file/: base64image.py
src/app_file/pages/: home_page.py
